@@ -1,2 +1,2 @@
-export JAVA_OPTS="-d64 -Xms256m -Xmx2024m -XX:MaxPermSize=128m"
+export JAVA_OPTS="-d64 -Xms256m -Xmx2024m -XX:+UseG1GC -Djava.net.preferIPv4Stack=true -Djava.net.preferIPv4Addresses=true -Djava.security.egd=file:///dev/urandom"
 export CATALINA_HOME="/usr/share/entermediadb/tomcat"
